RoboWork/loong_1_pc/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'D:\keil\MDK\ARM\ARMCLANG\Bin'
Build target 'origin'
../Core/Src/main.c(199): warning: passing 'char[128]' to parameter of type 'const uint8_t *' (aka 'const unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
  199 |         HAL_UART_Transmit(&huart1, t,strlen(t),100);            
      |                                    ^
../Drivers/STM32G4xx_HAL_Driver/Inc\stm32g4xx_hal_uart.h(1633): note: passing argument to parameter 'pData' here
 1633 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                               ^
1 warning generated.
compiling main.c...
compiling stm32g4xx_hal_msp.c...
compiling fdcan.c...
compiling gpio.c...
compiling adc.c...
compiling stm32g4xx_it.c...
compiling i2s.c...
compiling spi.c...
compiling bsp_IR_i2c.c...
compiling i2c.c...
compiling pid.c...
../Device/Src/motor.c(80): warning: relational comparison result unused [-Wunused-comparison]
   80 |     for(int i=0; i++; i<=drift)
      |                       ~^~~~~~~
1 warning generated.
compiling motor.c...
compiling usart.c...
compiling tim.c...
compiling tcs230.c...
../Device/Src/TSL1401.c(75): error: use of undeclared identifier 'huart1'
   75 |         HAL_UART_Transmit(&huart1,data,len,0xffff);
      |                            ^
../Device/Src/TSL1401.c(96): warning: passing 'char[2]' to parameter of type 'uint8_t *' (aka 'unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
   96 |         usart1_send("*",1);
      |                     ^~~
../Device/Src/TSL1401.c(73): note: passing argument to parameter 'data' here
   73 | void usart1_send(uint8_t *data,uint8_t len)
      |                           ^
../Device/Src/TSL1401.c(97): warning: passing 'char[3]' to parameter of type 'uint8_t *' (aka 'unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
   97 |         usart1_send("LD",2);
      |                     ^~~~
../Device/Src/TSL1401.c(73): note: passing argument to parameter 'data' here
   73 | void usart1_send(uint8_t *data,uint8_t len)
      |                           ^
../Device/Src/TSL1401.c(100): error: call to undeclared function 'binToHex_high'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  100 |                 usart1_send(&binToHex_high(SciBuf[i]),1); //以字符形式发送高4位对应的16进制
      |                              ^
../Device/Src/TSL1401.c(100): error: cannot take the address of an rvalue of type 'int'
  100 |                 usart1_send(&binToHex_high(SciBuf[i]),1); //以字符形式发送高4位对应的16进制
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
../Device/Src/TSL1401.c(101): error: call to undeclared function 'binToHex_low'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  101 |                 usart1_send(&binToHex_low(SciBuf[i]),1);  //以字符形式发送低4位对应的16进制:
      |                              ^
../Device/Src/TSL1401.c(101): error: cannot take the address of an rvalue of type 'int'
  101 |                 usart1_send(&binToHex_low(SciBuf[i]),1);  //以字符形式发送低4位对应的16进制:
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~
../Device/Src/TSL1401.c(104): warning: passing 'char[3]' to parameter of type 'uint8_t *' (aka 'unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
  104 |     usart1_send("00",2);   //通信协议要求
      |                 ^~~~
../Device/Src/TSL1401.c(73): note: passing argument to parameter 'data' here
   73 | void usart1_send(uint8_t *data,uint8_t len)
      |                           ^
../Device/Src/TSL1401.c(105): warning: passing 'char[2]' to parameter of type 'uint8_t *' (aka 'unsigned char *') converts between pointers to integer types where one is of the unique plain 'char' type and the other is not [-Wpointer-sign]
  105 |         usart1_send("#",1);    //通信协议要求
      |                     ^~~
../Device/Src/TSL1401.c(73): note: passing argument to parameter 'data' here
   73 | void usart1_send(uint8_t *data,uint8_t len)
      |                           ^
../Device/Src/TSL1401.c(186): error: conflicting types for 'binToHex_low'
  186 |  char binToHex_low(u8 num)
      |       ^
../Device/Src/TSL1401.c(101): note: previous implicit declaration is here
  101 |                 usart1_send(&binToHex_low(SciBuf[i]),1);  //以字符形式发送低4位对应的16进制:
      |                              ^
../Device/Src/TSL1401.c(235): error: conflicting types for 'binToHex_high'
  235 |  char binToHex_high(u8 num)
      |       ^
../Device/Src/TSL1401.c(100): note: previous implicit declaration is here
  100 |                 usart1_send(&binToHex_high(SciBuf[i]),1); //以字符形式发送高4位对应的16进制
      |                              ^
4 warnings and 7 errors generated.
compiling TSL1401.c...
"origin\origin.axf" - 7 Error(s), 6 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
